# mandelbrot-service-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
resources/: MandelbrotNFT.json
src/: main.rs
src/evm/: types.rs
