[package]
name = "mandelbrot-service-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.57"
poem-openapi = { version = "3.0.1", features = ["swagger-ui"] }
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
