[package]
name = "mandelbrot-service-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethabi = "18.0.0"
mandelbrot-explorer = { version = "0.1.0", path = "mandelbrot-explorer-rs" }
moka = { version = "0.11.3", features = ["future"] }
poem = { version = "1.3.57", features = ["static-files"] }
poem-openapi = { version = "3.0.1", features = ["swagger-ui"] }
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
web3 = "0.19.0"
